<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#655C5C">

    <CheckBox
        android:id="@+id/ckBx_cream"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:text="@string/coffee_cream"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_coffee_Qty"
        app:layout_constraintVertical_bias="0.081" />

    <CheckBox
        android:id="@+id/ckBx_caramel"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginBottom="216dp"
        android:text="@string/coffee_caramel"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ckBx_cream"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ckBx_cream"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/ckBx_whippedCream"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:text="@string/coffee_whipped_cream"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckBx_syrup"
        app:layout_constraintVertical_bias="0.004" />

    <ImageView
        android:id="@+id/iv_coffee_title"
        android:layout_width="221dp"
        android:layout_height="146dp"
        android:contentDescription="@string/main_image_for_coffee_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/ordering_coffee" />

    <TextView
        android:id="@+id/tv_coffee_title"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/coffee_order_coffee"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_coffee_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/tv_coffee_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/spn_coffee_size"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spn_coffee_size" />

    <Spinner
        android:id="@+id/spn_coffee_Qty"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:background="#D5D2B7"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spn_coffee_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spn_coffee_size"
        app:layout_constraintTop_toBottomOf="@+id/spn_coffee_size"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/tv_coffee_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/coffee_qty"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/spn_coffee_Qty"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spn_coffee_Qty" />

    <Spinner
        android:id="@+id/spn_coffee_size"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="104dp"
        android:background="#D5D2B7"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_coffee_title" />

    <TextView
        android:id="@+id/tv_subTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/coffee_sub_total"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_coffee_subTotal"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_coffee_subTotal"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:background="#D5D2B7"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="number|textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toEndOf="@+id/tv_subTotal"
        app:layout_constraintTop_toBottomOf="@+id/ckBx_whippedCream"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/bt_coffee_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addCoffee"
        android:text="@string/coffee_add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_coffee_subTotal"
        app:layout_constraintVertical_bias="0.487" />

    <CheckBox
        android:id="@+id/ckBx_milk"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:text="@string/coffee_milk"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ckBx_whippedCream"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ckBx_whippedCream"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/ckBx_syrup"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/coffee_syrup"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ckBx_cream"
        app:layout_constraintTop_toTopOf="@+id/ckBx_cream"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>